force-app/main/default/objects/Paper_Check__c/Paper_Check__c.object-meta.xml
<CustomObject>
    <label>Paper Check</label>
    <nameField>
        <label>Paper Checks Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Paper Checks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>