force-app/main/default/objects/Paper_Check__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>This is the Property Account to which the check is applied.</inlineHelpText>
    <label>Account</label>
    <lookupFilter>
        
            <active>true</active>
        
            <errorMessage>Paper checks can only be logged to Property Accounts.</errorMessage>
        
            <filterItems>
            
                <field>Account.RecordTypeId</field>
            
                <operation>equals</operation>
            
                <value>Property</value>
            
            </filterItems>
        
            <isOptional>false</isOptional>
        
        </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Paper Checks</relationshipLabel>
    <relationshipName>Paper_Checks</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>