force-app/main/default/objects/Paper_Check__c/fields/Anchor__c.field-meta.xml
<CustomField>
    <fullName>Anchor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non-Billed Anchor</label>
    <type>Checkbox</type>
</CustomField>