force-app/main/default/objects/Paper_Check__c/fields/Applied_to_Account__c.field-meta.xml
<CustomField>
    <fullName>Applied_to_Account__c</fullName>
    <label>Applied to Account?</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Not Applied in Salesforce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>