force-app/main/default/objects/Paper_Check__c/fields/Check_Date__c.field-meta.xml
<CustomField>
    <fullName>Check_Date__c</fullName>
    <formula>IF( ISBLANK(Override_Check_Date__c), DATEVALUE( CreatedDate ),  Override_Check_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Date</label>
    <type>Date</type>
</CustomField>