force-app/main/default/objects/Paper_Check__c/fields/Override_Check_Date__c.field-meta.xml
<CustomField>
    <fullName>Override_Check_Date__c</fullName>
    <label>Override Check Date</label>
    <type>Date</type>
</CustomField>