force-app/main/default/objects/Paper_Check__c/fields/X18_Digit_id__c.field-meta.xml
<CustomField>
    <fullName>X18_Digit_id__c</fullName>
    <formula>CASESAFEID( Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>18 Digit id</label>
    <type>Text</type>
</CustomField>