force-app/main/default/objects/Paper_Check__c/validationRules/Enforce_Unique_Names.validationRule-meta.xml
<ValidationRule>
    <fullName>Enforce_Unique_Names</fullName>
    <active>true</active>
    <errorConditionFormula>AND(IF(
VLOOKUP($ObjectType.Paper_Check__c.Fields.Name, $ObjectType.Paper_Check__c.Fields.Name,  Name )= Name,true,false), ISNEW()=true)</errorConditionFormula>
    <errorMessage>Checks must have a unique BlueWave Account number and Check number.</errorMessage>
</ValidationRule>