force-app/main/default/objects/Paper_Check__c/validationRules/Restrict_Changes_After_Logging.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Changes_After_Logging</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
$User.ProfileId!=&apos;00ej0000000tMiv&apos;,
TEXT(Applied_to_Account__c)=&apos;No&apos;,
OR(ISCHANGED(Amount__c)=true,
ISCHANGED(Account__c)=true,
ISCHANGED(Check_Number__c),
ISCHANGED(Applied_to_Account__c),
ISCHANGED(Name)
))</errorConditionFormula>
    <errorMessage>Paper Checks cannot be modified after they&apos;ve been applied to an Account.</errorMessage>
</ValidationRule>