force-app/main/default/objects/Paper_Check__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>Anchor__c</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Amount__c</columns>
    <columns>Applied_to_Account__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>